# ogronman-task-13

./: .gitignore  Cargo.toml  README.md  run.ps1  run.sh
src/: Circle.java  Light.java  PaintPanel.java  lib.rs  main.h  main.java  main.rs  point.rs  vector.rs
src/-jni/: main.h
