[package]
name = "ogronman-task-13"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
jni = "0.19.0"

[lib]
name = "embed"
crate-type = ["cdylib"]